name:                Asm6502
version:             1.0.0.0
synopsis:            Asm6502 is an assembler for the MOS Technology 6502. The generated PRG output files can be loaded into an C64 emulator.
homepage:            https://github.com/m-schmidt/Asm6502
license:             MIT
license-file:        LICENSE
author:              Michael Schmidt
maintainer:          github@mschmidt.me
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Asm6502
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, bytestring >=0.10 && <0.11, filepath >=1.4 && <1.5, containers >=0.5 && <0.6, parsec==3.1.*
  default-language:    Haskell2010
