name:                  Asm6502
version:               1.0.0.0
description:           Assembler for the MOS Technology 6502
homepage:              https://github.com/m-schmidt/Asm6502
license:               BSD3
license-file:          LICENSE
author:                Michael Schmidt
maintainer:            github@mschmidt.me
category:              Development
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

Executable asm6502
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Arch6502
                     , AsmOutput
                     , AsmParser
                     , Assembler
                     , Commandline
                     , Error
  build-depends:       base >= 4.7 && < 5
                     , bytestring >=0.10 && <0.11
                     , filepath >=1.4 && <1.5
                     , containers >=0.6 && <0.7
                     , parsec==3.1.*
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
